feat: criação em massa de elementos de especificação